--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "medusa-starter-default",
+  "name": "medusa-mongodb-datasource",
   "version": "0.0.1",
   "description": "A starter for Medusa projects.",
-  "author": "Sebastian Rindom <skrindom@gmail.com>",
+  "author": "zbingsong",
   "license": "MIT",
   "keywords": [
     "sqlite",
-    "postgres",
     "typescript",
     "ecommerce",
     "headless",
     "medusa"
   ],
+  "main": "./dist/index.js",
   "scripts": {
     "clean": "cross-env ./node_modules/.bin/rimraf dist",
     "build": "cross-env npm run clean && tsc -p tsconfig.json",
@@ -24,34 +24,40 @@
     "build:admin": "cross-env medusa-admin build"
   },
   "dependencies": {
-    "@medusajs/event-bus-local": "^1.9.4",
-    "@medusajs/event-bus-redis": "^1.8.7",
+    "@medusajs/event-bus-local": "^1.9.5",
+    "@medusajs/event-bus-redis": "^1.8.8",
     "@medusajs/file-local": "^1.0.1",
-    "@medusajs/medusa": "^1.12.0",
-    "body-parser": "^1.19.0",
+    "@medusajs/medusa": "^1.12.1",
+    "@medusajs/modules-sdk": "^1.8.8",
+    "awilix": "^8.0.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.1.4",
-    "express": "^4.17.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "medusa-interfaces": "^1.3.7",
-    "prettier": "^2.8.8",
-    "typeorm": "^0.3.16"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/preset-typescript": "^7.21.4",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.8",
-    "babel-preset-medusa-package": "^1.1.13",
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "babel-preset-medusa-package": "^1.1.19",
     "cross-env": "^7.0.3",
-    "eslint": "^6.8.0",
-    "jest": "^27.3.1",
-    "mongoose": "^5.13.14",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.7",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2"
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "mongoose": "^7.3.1",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6"
   },
   "jest": {
     "globals": {
