--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es5", "es6"],
+    "lib": ["es2020"],
     "target": "esnext",
     "allowJs": true,
     "esModuleInterop": true,
@@ -14,11 +14,16 @@
     "sourceMap": false,
     "outDir": "./dist",
     "rootDir": "src",
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "noImplicitReturns": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "noImplicitThis": true,
   },
   "include": ["src"],
   "exclude": [
     "**/__tests__",
+    "**/__mocks__",
     "**/__fixtures__",
     "node_modules"
   ]
